Remove javax.xml.bind dependency